--- a/templates/log-in.html
+++ b/templates/log-in.html
@@ -66,7 +66,7 @@
                 padding: 12px 20px;
                 margin: 8px 0;
                 display: inline-block;
-                border: 1px solid white;
+                border: 1px solid #52B788;
                 box-sizing: border-box;
             }
 
@@ -76,7 +76,7 @@
                 color: #52B788;
                 padding: 14px 20px;
                 margin: 8px 0;
-                border: none;
+                border: 1px solid #52B788;
                 cursor: pointer;
                 width: 100%;
             }
