--- a/templates/info.html
+++ b/templates/info.html
@@ -29,7 +29,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link"
-                        href= "/login">Log
+                        href= "/log-in">Log
                         In</a>
                 </li>
                 <li class="nav-item dropdown">
