--- a/templates/home.html
+++ b/templates/home.html
@@ -59,16 +59,11 @@
     <body>
         <div id="MainText">
             <h1>EduMental</h1>
-            <p id="SubText">This website is for spreading awareness on Mental Heath and helping students who have issues
-                to get help.</p>
+            <p id="SubText">"For Students By Students"</p>
 
             <img src="https://970-4770e44f-1df9-41fc-a010-c0c248f1e670.cs-us-east1-pkhd.cloudshell.dev/mini-browser/home/mattvarela06/Day%20Eight/Mental%20Health%20Website/static/images/Logo.png"
                 alt="Logo" height="100" width="100" id="Logo" />
 
-        </div>
-        <div id=Slogan>
-            <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
-            <p>"For Students By Students"</p>
         </div>
         <div id="BasicInfo">
             <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
